--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.3",
     "sqlite3": "^5.0.9"
   },
